# auto_go

./: .env.example  .gitignore  PROJECT_MAP.md  README.md  REPO_NOTE.md  package-lock.json  package.json  pyproject.toml  微信mcp.md  🧠 项目技术设计说明（足球比赛自动内容生成系统）.md
scripts/: demo_preview.ps1
src/auto_football/: __init__.py  adapters.py  cache.py  cli.py  clients.py  (+10 more)
tests/: test_ark_image_client.py  test_auto_draft_selector_service.py  test_cli_entrypoint.py  test_clubelo_matching.py  test_content_client_contract.py  test_content_engine_schemas.py  test_content_pipeline_phase1.py  test_content_pool_expansion.py  test_content_stale_pruning.py  test_content_validation_service.py  test_db_content_storage.py  test_db_hit_layer.py  test_douyin_video_cli.py  test_douyin_video_db.py  test_douyin_video_service.py  test_editorial_brief_services.py  test_fact_pack_service.py  test_fbref_reader_integration_contract.py  test_fbref_whoscored_clients.py  test_image_generation_service.py  test_knowledge_service.py  test_match_enrichment_service.py  test_match_quality_gate.py  test_odds_consistency_guard.py  test_preview_coverage_reporting.py  test_preview_historical_separation.py  test_publisher_registry.py  test_router_elite_fallback.py  test_routing.py  test_slot_driven_sections.py  test_source_capability_gating.py  test_stage0_smoke_baseline.py  test_structured_enrichment.py  test_thesportsdb_client.py  test_visual_brief_service.py  test_wechat_config.py  test_wechat_fallback_diversity.py  test_wechat_publisher.py  test_wechat_style_diversification.py  test_whoscored_cache_parser.py  (+10 more)
(+59 files in other folders)
