[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-football"
version = "0.1.0"
description = "Football match content automation pipeline built with LangGraph."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.14,<5.0",
  "httpx>=0.27,<1.0",
  "langgraph>=0.2,<1.0",
  "lxml>=6.0,<7.0",
  "pillow>=10.4,<12.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=5.0,<6.0",
  "soccerdata>=1.9,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "statsbombpy>=1.18,<2.0",
  "tenacity>=8.5,<10.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
auto-football = "auto_football.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
